@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - added [ACPS::CSSMinifier]
   - added [ACPS::JavaScriptMinifier]
 
 0.09      2012-12-11 12:20:22 America/New_York
